--- a/src/pages/Error/styles/Error.module.scss
+++ b/src/pages/Error/styles/Error.module.scss
@@ -67,6 +67,15 @@
         font-size: 8px;
     }
 
+    .errorImage{
+        height: 82vh;
+    }
+
+    .box{
+        height: 70%;
+        width: 90%;
+    }
+
     .errorImage button {
         margin: 20px 0;
         padding: 5px 12px;
