--- a/src/pages/Event/styles/Event.module.scss
+++ b/src/pages/Event/styles/Event.module.scss
@@ -324,6 +324,16 @@
     font-weight: 400;
     margin-bottom: 10px;
   }
+
+  .seeall{
+    text-align: center;
+    margin-left: 1rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .bottom{
+    height: 4rem;
+  }
 }
 
 @media (min-width: 600px) {
